🔧 Atualiza documentação e resolve problemas críticos relacionados ao Prisma 6.15.0
### Changed 🔄
- Atualizada seção de problemas críticos resolvidos para incluir descoberta sobre a variável `PRISMA_GENERATE_DATAPROXY="false"` que causa erro P6001.
- Adicionada nova seção de troubleshooting com solução detalhada para o problema de conectividade do Prisma.

### Added ✨
- Novo script `diagnose-connection.js` para verificar variáveis de ambiente e status de conexão do banco de dados.
- Script `fix-prisma-imports.js` para corrigir imports dinâmicos do Prisma em APIs.

### Fixed 🐛
- Corrigidos imports dinâmicos do Prisma para melhorar a performance e evitar erros de inicialização.

Essas mudanças visam garantir a estabilidade e a performance do projeto, além de fornecer documentação clara para evitar reintrodução de problemas críticos.

--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "check:outdated-safe": "pnpm outdated | grep -E '@radix-ui|@testing-library|date-fns|lucide-react' || true",
     "update:safe": "pnpm update @radix-ui/react-* @testing-library/* date-fns lucide-react clsx",
     "verify:after-update": "pnpm check:compatibility && pnpm run build && pnpm test",
-    "diagnose:database": "node scripts/diagnose-database.js"
+    "diagnose:database": "node scripts/diagnose-database.js",
+    "diagnose:connection": "node scripts/diagnose-connection.js"
   },
   "dependencies": {
     "@auth/core": "0.40.0",
