🔧 Atualiza e expande a validação de equipamentos com novos campos de uso direto
### Added ✨
- Novos campos `biweeklyUseDirectValue` e `monthlyUseDirectValue` adicionados ao modelo `Equipment` no Prisma e nos schemas de validação, permitindo a utilização de valores diretos em vez de percentuais para descontos.

### Changed 🔄
- Atualização da documentação no `CHANGELOG.md` para refletir as novas funcionalidades e melhorias.

Essas mudanças visam aprimorar a flexibilidade e a funcionalidade do sistema de equipamentos, permitindo uma melhor gestão de preços e promoções.

--- a/package.json
+++ b/package.json
@@ -214,7 +214,7 @@
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   },
-  "packageManager": "pnpm@10.14.0+sha256.297534e65d5842450539c1e8022c8831ab5e1fe2eb74664787a815519542d620",
+  "packageManager": "pnpm@10.15.0",
   "engines": {
     "node": ">=20.0.0",
     "pnpm": ">=10.0.0"
