chore(deps): update framer-motion to 12.23.18; svelte to 5.39.4; @sveltejs/kit to 2.43.1; @typescript-eslint/* to 8.44.1

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -45,7 +45,24 @@
     "rule-empty-line-before": null,
     "declaration-empty-line-before": null,
     "property-no-vendor-prefix": null,
-    "keyframes-name-pattern": null
+    "keyframes-name-pattern": null,
+    "property-no-unknown": [
+      true,
+      {
+        "ignoreProperties": [
+          "backdrop-filter",
+          "scrollbar-width",
+          "scrollbar-color",
+          "touch-action",
+          "overscroll-behavior",
+          "contain",
+          "scroll-behavior"
+        ]
+      }
+    ],
+    "value-no-vendor-prefix": null,
+    "color-function-alias-notation": null,
+    "declaration-block-no-redundant-longhand-properties": null
   },
   "ignoreFiles": [
     "storybook-static/**/*",
