--- a/.editorconfig
+++ b/.editorconfig
@@ -3,13 +3,18 @@ root = true
 [*]
 charset = utf-8
 end_of_line = lf
-indent_style = space
-indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[*.{js,ts,tsx,jsx,json}]
+indent_style = space
+indent_size = 2
 
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{json,yml,yaml}]
+[*.css]
+# Disable CSS compatibility checking
+# These warnings are expected for modern CSS features
+indent_style = space
 indent_size = 2
