--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
     "@supabase/supabase-js": "^2.57.4",
-    "@sveltejs/kit": "2.42.2",
+    "@sveltejs/kit": "2.43.1",
     "@testing-library/dom": "^10.4.1",
     "@types/debug": "latest",
     "@types/eslint": "latest",
@@ -129,7 +129,7 @@
     "eslint-plugin-prettier": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
-    "framer-motion": "^12.23.16",
+    "framer-motion": "^12.23.18",
     "globals": "16.4.0",
     "happy-dom": "latest",
     "input-otp": "latest",
@@ -151,7 +151,7 @@
     "scrollreveal": "^4.0.9",
     "sonner": "^2.0.7",
     "stripe": "latest",
-    "svelte": "^5.39.3",
+    "svelte": "^5.39.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript-eslint": "^8.44.0",
@@ -183,6 +183,8 @@
     "@types/node": "^24.5.2",
     "@types/react": "19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@typescript-eslint/eslint-plugin": "8.44.1",
+    "@typescript-eslint/parser": "8.44.1",
     "@vitejs/plugin-react": "^5.0.3",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "3.2.4",
