--- a/package.json
+++ b/package.json
@@ -60,10 +60,9 @@
     "ci:prisma-only": "pnpm db:generate && pnpm check:prisma",
     "fix:typescript": "node scripts/fix-typescript-errors.js",
     "ci:typescript-fix": "pnpm fix:typescript && pnpm type-check",
-    "check:compatibility": "node scripts/check-compatibility.cjs",
     "check:outdated-safe": "pnpm outdated | grep -E '@radix-ui|@testing-library|date-fns|lucide-react' || true",
     "update:safe": "pnpm update @radix-ui/react-* @testing-library/* date-fns lucide-react clsx",
-    "verify:after-update": "pnpm check:compatibility && pnpm run build && pnpm test",
+    "verify:after-update": "pnpm run build && pnpm test",
     "diagnose:database": "node scripts/diagnose-database.js",
     "diagnose:connection": "node scripts/diagnose-connection.js",
     "supabase": "npx -y supabase"
