--- a/lib/validations/.prisma-zod-generator-manifest.json
+++ b/lib/validations/.prisma-zod-generator-manifest.json
@@ -1,7 +1,7 @@
 {
   "version": "1.0",
-  "generatorVersion": "0.1.0",
-  "generatedAt": "2025-09-24T22:58:22.544Z",
+  "generatorVersion": "unknown",
+  "generatedAt": "2025-09-25T01:12:44.471Z",
   "outputPath": "C:\\Projetos\\GB-Locacoes\\lib\\validations",
   "files": [
     "schemas\\enums\\TransactionIsolationLevel.schema.ts",
