--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
+    "@react-email/render": "^1.3.1",
     "@supabase/supabase-js": "^2.57.4",
     "@sveltejs/kit": "2.43.2",
     "@testing-library/dom": "^10.4.1",
