fix: atualizar pnpm-lock.yaml para sincronizar com package.json
- Resolvido erro ERR_PNPM_OUTDATED_LOCKFILE no Vercel
- Sincronizado @types/react de 19.1.17 para 19.1.13
- Build local funcionando corretamente
- Pronto para deploy no Vercel

--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
     "postbuild": "node scripts/patch-prisma.js",
     "postinstall": "prisma generate && node scripts/post-prisma-generate.js",
     "check:equipments": "node scripts/check-equipments.mjs",
+    "check:supabase": "node scripts/check-supabase-performance.js",
+    "diagnose:supabase": "node scripts/supabase-diagnostics.js",
+    "supabase:status": "node scripts/check-supabase-performance.js",
+    "migrate:v4": "node scripts/execute-migration-v4-fixed.js",
+    "fix:rls": "node scripts/fix-rls-policies.js",
+    "force:fix": "node scripts/force-fix-rls.js",
+    "final:fix": "node scripts/final-rls-fix.js",
+    "debug:rls": "node scripts/debug-policies.js",
+    "alter:rls": "node scripts/alter-policies.js",
     "codex:setup": "pnpm install && pnpm db:generate && pnpm db:push",
     "db:generate": "prisma generate && node scripts/post-prisma-generate.js",
     "db:push": "prisma db push",
