refactor: remove Chromatic and update configuration
### Removed ❌
- Excluído Chromatic de configurações e documentação
- Removido suporte a Chromatic em arquivos de configuração e documentação

### Changed 🔄
- Atualizadas configurações do pnpm para desabilitar warnings e melhorar compatibilidade
- Alterações na documentação para refletir uso do Storybook em vez de Chromatic

### Fixed 🐛
- Corrigidos links e referências a Chromatic em diversos arquivos
- Ajustes na configuração do ambiente para melhor integração com Storybook

--- a/.npmrc
+++ b/.npmrc
@@ -1,10 +1,12 @@
-# Configurações do pnpm para suprimir warnings
-shamefully-hoist=true
-auto-install-peers=true
-enable-pre-post-scripts=true
-strict-peer-dependencies=false
-resolution-mode=highest
-prefer-frozen-lockfile=false
+# Configurações do npm para evitar warnings do pnpm
+# Essas configurações são ignoradas pelo pnpm mas evitam warnings do npm
 
-# Suprimir todos os warnings chatos
+# Desabilitar warnings de configurações desconhecidas
 fund=false
+audit=false
+
+# Configurações de compatibilidade
+legacy-peer-deps=true
+
+# Suprimir warnings específicos do pnpm
+loglevel=error
