--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "final:fix": "node scripts/final-rls-fix.js",
     "debug:rls": "node scripts/debug-policies.js",
     "alter:rls": "node scripts/alter-policies.js",
+    "resolve:warnings": "node scripts/resolve-all-warnings.js",
+    "monitor:indexes": "node scripts/monitor-index-usage.js",
     "codex:setup": "pnpm install && pnpm db:generate && pnpm db:push",
     "db:generate": "prisma generate && node scripts/post-prisma-generate.js",
     "db:push": "prisma db push",
@@ -45,23 +47,19 @@
     "type-check": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "chromatic --project-token=chpt_ed7c61c0587a8b0",
-    "chromatic:test": "chromatic --project-token=chpt_ed7c61c0587a8b0 --exit-zero-on-changes",
     "openapi:generate": "next-openapi-gen",
     "openapi:generate-zod": "tsx scripts/generate-openapi-zod.ts",
     "openapi:dev": "next-openapi-gen --watch",
     "docs:dev": "pnpm dev",
-    "chromatic:accept": "chromatic --auto-accept-changes",
     "design-system:build-tokens": "node scripts/build-design-tokens.js",
-    "design-system:watch-tokens": "style-dictionary build --watch",
+    "design-system:watch-tokens": "node scripts/watch-design-tokens-simple.js",
     "design-system:storybook": "pnpm storybook",
     "design-system:build": "pnpm build-storybook",
-    "design-system:publish": "pnpm chromatic:ci",
+    "design-system:publish": "pnpm build-storybook",
     "design-system:lint": "pnpm lint && stylelint \"**/*.{css,scss}\"",
     "design-system:lint:fix": "pnpm lint:fix && stylelint \"**/*.{css,scss}\" --fix",
     "ci:test": "pnpm db:generate && pnpm lint && pnpm test && pnpm type-check",
     "ci:build": "pnpm db:generate && pnpm build-storybook",
-    "ci:chromatic": "pnpm chromatic:ci",
     "ci:full": "pnpm db:generate && pnpm lint && pnpm test && pnpm type-check && pnpm build",
     "check:prisma": "node scripts/check-prisma.js",
     "preci:test": "pnpm check:prisma",
@@ -149,9 +147,9 @@
     "next-themes": "latest",
     "nodemailer": "7.0.6",
     "pino": "9.12.0",
-    "react": "19.1.1",
+    "react": "19.2.0",
     "react-day-picker": "^9.11.0",
-    "react-dom": "19.1.1",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.63.0",
     "react-resizable-panels": "^3.0.6",
     "react-syntax-highlighter": "^15.6.1",
@@ -172,7 +170,6 @@
   },
   "devDependencies": {
     "@asteasolutions/zod-to-openapi": "^8.1.0",
-    "@chromatic-com/storybook": "^4.1.0",
     "@eslint/eslintrc": "^3.3.1",
     "@next/eslint-plugin-next": "^15.5.4",
     "@storybook/addon-a11y": "9.2.0-alpha.2",
@@ -189,8 +186,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.6.1",
-    "@types/react": "19.1.17",
-    "@types/react-dom": "^19.1.11",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "^19.2.0",
     "@typescript-eslint/eslint-plugin": "8.45.0",
     "@typescript-eslint/parser": "8.45.0",
     "@vitejs/plugin-react": "^5.0.4",
@@ -198,7 +195,6 @@
     "@vitest/coverage-v8": "3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
-    "chromatic": "^13.3.0",
     "eslint": "^9.36.0",
     "eslint-config-next": "15.5.4",
     "eslint-plugin-react-hooks": "latest",
@@ -209,6 +205,7 @@
     "markdownlint": "^0.38.0",
     "markdownlint-cli": "^0.45.0",
     "next-openapi-gen": "^0.7.9",
+    "nodemon": "^3.1.10",
     "playwright": "^1.55.1",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
