fix: correções e melhorias na página de orçamentos e componentes de filtro
### Fixed 🐛
- **FilterResetButton**: Corrigido problema de shadow e hover shadow, removida classe conflitante e implementadas regras CSS específicas.
- **Dropdown de filtros**: Resolvido problema de seleção de opções e ajustado z-index para evitar interferências.
- **SearchBar Component**: Corrigido para manter consistência visual com a barra de pesquisa da página de equipamentos.

### Changed 🔄
- **Página de Orçamentos**: Substituído bloco "Filtros e Busca" pela nova SearchBar, otimizando o layout e a experiência do usuário.

### Improved 🎨
- **Layout Responsivo**: Melhorias na responsividade da barra de pesquisa e consistência visual em toda a interface.

### Removed ❌
- Removida seção "Ações Rápidas" da página de orçamentos para simplificação do layout.

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "ci:prisma-only": "pnpm db:generate && pnpm check:prisma",
     "fix:typescript": "node scripts/fix-typescript-errors.js",
     "ci:typescript-fix": "pnpm fix:typescript && pnpm type-check",
-    "check:outdated-safe": "pnpm outdated | grep -E '@radix-ui|@testing-library|date-fns|lucide-react' || true",
+    "check:outdated-safe": "pnpm outdated | findstr /R \"@radix-ui @testing-library date-fns lucide-react\" || echo No outdated packages found",
     "update:safe": "pnpm update @radix-ui/react-* @testing-library/* date-fns lucide-react clsx",
     "verify:after-update": "pnpm run build && pnpm test",
     "diagnose:database": "node scripts/diagnose-database.js",
@@ -211,7 +211,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "^6.16.3",
-    "prisma-zod-generator": "^1.25.1",
+    "prisma-zod-generator": "^1.26.0",
     "storybook": "9.2.0-alpha.2",
     "style-dictionary": "^5.1.0",
     "stylelint": "^16.24.0",
