--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@edge-runtime/vm": "latest",
     "@emotion/is-prop-valid": "^1.4.0",
-    "@eslint/js": "9.36.0",
+    "@eslint/js": "9.37.0",
     "@hookform/resolvers": "^5.2.2",
     "@next/bundle-analyzer": "15.5.4",
     "@prisma/client": "^6.16.3",
@@ -150,7 +150,7 @@
     "react": "19.2.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "19.2.0",
-    "react-hook-form": "^7.63.0",
+    "react-hook-form": "^7.64.0",
     "react-resizable-panels": "^3.0.6",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^3.2.1",
@@ -170,17 +170,14 @@
   },
   "devDependencies": {
     "@asteasolutions/zod-to-openapi": "^8.1.0",
+    "@eslint/compat": "^1.4.0",
     "@eslint/eslintrc": "^3.3.1",
     "@next/eslint-plugin-next": "^15.5.4",
-    "@storybook/addon-a11y": "9.2.0-alpha.2",
-    "@storybook/addon-docs": "9.2.0-alpha.2",
-    "@storybook/addon-essentials": "9.0.0-alpha.12",
-    "@storybook/addon-interactions": "9.0.0-alpha.10",
-    "@storybook/addon-onboarding": "9.2.0-alpha.2",
-    "@storybook/addon-vitest": "9.2.0-alpha.2",
+    "@storybook/addon-essentials": "^8.6.14",
     "@storybook/nextjs": "^9.1.10",
-    "@storybook/react-vite": "9.2.0-alpha.2",
-    "@storybook/test": "9.0.0-alpha.2",
+    "@storybook/react": "^8.6.14",
+    "@storybook/test": "^8.6.14",
+    "@storybook/addon-vitest": "^9.1.10",
     "@storybook/test-runner": "0.23.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -195,9 +192,9 @@
     "@vitest/coverage-v8": "3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.36.0",
+    "eslint": "^9.37.0",
     "eslint-config-next": "15.5.4",
-    "eslint-plugin-react-hooks": "latest",
+    "eslint-plugin-react-hooks": "6.1.1",
     "eslint-plugin-storybook": "9.1.10",
     "husky": "^9.1.7",
     "jsdom": "^27.0.0",
@@ -212,7 +209,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "^6.16.3",
     "prisma-zod-generator": "^1.26.0",
-    "storybook": "9.2.0-alpha.2",
+    "storybook": "^9.1.10",
     "style-dictionary": "^5.1.0",
     "stylelint": "^16.25.0",
     "stylelint-config-standard": "^39.0.0",
