--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "@eslint/js": "9.37.0",
     "@hookform/resolvers": "^5.2.2",
     "@next/bundle-analyzer": "15.5.4",
-    "@prisma/client": "^6.17.0",
+    "@prisma/client": "^6.17.1",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -114,7 +114,7 @@
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
     "@react-email/render": "^1.3.1",
-    "@supabase/supabase-js": "^2.58.0",
+    "@supabase/supabase-js": "^2.75.0",
     "@sveltejs/kit": "2.46.4",
     "@testing-library/dom": "^10.4.1",
     "@types/debug": "latest",
@@ -136,9 +136,9 @@
     "eslint-config-prettier": "latest",
     "eslint-plugin-prettier": "latest",
     "eslint-plugin-react": "latest",
-    "framer-motion": "^12.23.22",
+    "framer-motion": "^12.23.24",
     "globals": "16.4.0",
-    "happy-dom": "latest",
+    "happy-dom": "20.0.0",
     "input-otp": "latest",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.545.0",
@@ -150,7 +150,7 @@
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
-    "react-hook-form": "^7.64.0",
+    "react-hook-form": "^7.65.0",
     "react-resizable-panels": "^3.0.6",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^3.2.1",
@@ -182,7 +182,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^24.6.2",
+    "@types/node": "^24.7.2",
     "@types/react": "19.2.2",
     "@types/react-dom": "^19.2.1",
     "@typescript-eslint/eslint-plugin": "8.46.0",
@@ -207,8 +207,8 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "prisma": "^6.17.0",
-    "prisma-zod-generator": "^1.27.4",
+    "prisma": "^6.17.1",
+    "prisma-zod-generator": "^1.27.6",
     "storybook": "^9.1.10",
     "style-dictionary": "^5.1.1",
     "stylelint": "^16.25.0",
@@ -221,7 +221,7 @@
     "typescript-eslint": "^8.45.0",
     "vitest": "^3.2.4"
   },
-  "packageManager": "pnpm@10.18.1",
+  "packageManager": "pnpm@10.18.2",
   "engines": {
     "node": ">=20.0.0",
     "pnpm": ">=10.0.0"
