--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
     "dev": "next dev --turbopack",
+    "dev:with-browsertools": "concurrently --kill-others --names \"NEXT,TOOLS,STORY\" \"pnpm dev\" \"npx @agentdeskai/browser-tools-server@1.2.0\" \"pnpm storybook\"",
+    "dev:browsertools": "concurrently --kill-others --names \"NEXT,TOOLS\" \"pnpm dev\" \"npx     @agentdeskai/browser-tools-server@1.2.0\"",
+    "browsertools": "npx @agentdeskai/browser-tools-server@1.2.0",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "format:md": "prettier --write \"**/*.md\"",
@@ -192,6 +195,7 @@
     "@vitest/coverage-v8": "3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.1",
     "eslint": "^9.37.0",
     "eslint-config-next": "15.5.4",
     "eslint-plugin-react-hooks": "7.0.0",
