feat: adiciona suporte a telefones da empresa e WhatsApp na configuração pública
### Added ✨
- Implementado novo endpoint API para buscar configurações públicas, incluindo telefone fixo e WhatsApp.
- Adicionado hook `usePublicSettings` para gerenciar e fornecer configurações em componentes.
- Atualizados componentes relevantes para utilizar os novos dados de telefone e WhatsApp, melhorando a consistência em todo o site.

### Changed 🔄
- Modificado a exibição de números de telefone em vários componentes, como Header, Footer, e Contato, para utilizar as configurações dinâmicas.
- Atualizados placeholders e labels nos formulários de configuração para refletir as novas informações.

### Notes 📝
- A nova funcionalidade melhora a flexibilidade e a manutenção das informações de contato, permitindo atualizações centralizadas no banco de dados.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "db:generate": "prisma generate && node scripts/post-prisma-generate.js",
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
+    "db:seed:phones": "tsx scripts/seed-company-phones.ts",
     "db:studio": "prisma studio",
     "dev": "next dev --turbopack",
     "dev:with-browsertools": "concurrently --kill-others --names \"NEXT,TOOLS,STORY\" \"pnpm dev\" \"npx @agentdeskai/browser-tools-server@1.2.0\" \"pnpm storybook\"",
