--- a/package.json
+++ b/package.json
@@ -34,6 +34,12 @@
     "format:check": "prettier --check .",
     "format:md": "prettier --write \"**/*.md\"",
     "format:md:check": "prettier --check \"**/*.md\"",
+    "fix:encoding": "node scripts/fix-encoding.mjs",
+    "fix:changelog": "node scripts/fix-encoding.mjs CHANGELOG.md",
+    "check:grammar": "node scripts/fix-grammar.mjs",
+    "check:grammar:changelog": "node scripts/fix-grammar.mjs CHANGELOG.md",
+    "fix:grammar": "node scripts/apply-grammar-fixes.mjs",
+    "fix:grammar:changelog": "node scripts/apply-grammar-fixes.mjs CHANGELOG.md",
     "lint": "eslint . --ext .js,.ts,.tsx --no-color --quiet || exit 0",
     "lint:fix": "eslint . --ext .js,.ts,.tsx --fix",
     "lint:md": "markdownlint \"**/*.md\"",
@@ -204,6 +210,7 @@
     "eslint-plugin-storybook": "10.0.2",
     "husky": "^9.1.7",
     "jsdom": "^27.0.0",
+    "languagetool-cli": "^1.0.13",
     "markdown-to-jsx": "^8.0.0",
     "markdownlint": "^0.39.0",
     "markdownlint-cli": "^0.45.0",
