--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@edge-runtime/vm": "latest",
     "@emotion/is-prop-valid": "^1.4.0",
-    "@eslint/js": "9.39.0",
+    "@eslint/js": "9.39.1",
     "@hookform/resolvers": "^5.2.2",
     "@next/bundle-analyzer": "16.0.1",
     "@prisma/client": "^6.17.1",
@@ -119,7 +119,7 @@
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
     "@react-email/render": "^1.3.1",
-    "@supabase/supabase-js": "^2.78.0",
+    "@supabase/supabase-js": "^2.79.0",
     "@sveltejs/kit": "2.48.4",
     "@testing-library/dom": "^10.4.1",
     "@types/debug": "latest",
@@ -160,11 +160,11 @@
     "react-resizable-panels": "^3.0.6",
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.2.1",
-    "resend": "^6.4.0",
+    "resend": "^6.4.1",
     "scrollreveal": "^4.0.9",
     "sonner": "^2.0.7",
     "stripe": "latest",
-    "svelte": "^5.43.2",
+    "svelte": "^5.43.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "latest",
@@ -179,23 +179,30 @@
     "@eslint/compat": "^1.4.1",
     "@eslint/eslintrc": "^3.3.1",
     "@next/eslint-plugin-next": "^16.0.1",
+    "@storybook/addon-a11y": "^10.0.4",
+    "@storybook/addon-docs": "^10.0.4",
+    "@storybook/addon-onboarding": "^10.0.4",
+    "@storybook/addon-vitest": "^10.0.4",
+    "@storybook/nextjs": "^10.0.4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.9.2",
     "@types/react": "19.2.2",
     "@types/react-dom": "^19.2.2",
-    "@typescript-eslint/eslint-plugin": "8.46.2",
-    "@typescript-eslint/parser": "8.46.2",
+    "@typescript-eslint/eslint-plugin": "8.46.3",
+    "@typescript-eslint/parser": "8.46.3",
     "@vitejs/plugin-react": "^5.0.4",
     "@vitest/browser": "^3.2.4",
-    "@vitest/coverage-v8": "4.0.6",
+    "@vitest/browser-playwright": "4.0.7",
+    "@vitest/coverage-v8": "4.0.7",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.2.1",
-    "eslint": "^9.39.0",
+    "eslint": "^9.39.1",
     "eslint-config-next": "16.0.1",
     "eslint-plugin-react-hooks": "7.0.1",
+    "eslint-plugin-storybook": "^10.0.4",
     "husky": "^9.1.7",
     "jsdom": "^27.1.0",
     "languagetool-cli": "^1.0.13",
@@ -210,6 +217,7 @@
     "prettier-plugin-tailwindcss": "^0.7.1",
     "prisma": "^6.17.1",
     "prisma-zod-generator": "^1.31.2",
+    "storybook": "^10.0.4",
     "style-dictionary": "^5.1.1",
     "stylelint": "^16.25.0",
     "stylelint-config-standard": "^39.0.0",
@@ -219,16 +227,7 @@
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.1",
-    "vitest": "^4.0.6",
-    "@vitest/browser-playwright": "4.0.6",
-    "storybook": "^10.0.3",
-    "@storybook/nextjs": "^10.0.3",
-    "@chromatic-com/storybook": "^4.1.2",
-    "@storybook/addon-docs": "^10.0.3",
-    "@storybook/addon-onboarding": "^10.0.3",
-    "eslint-plugin-storybook": "^10.0.3",
-    "@storybook/addon-a11y": "^10.0.3",
-    "@storybook/addon-vitest": "^10.0.3"
+    "vitest": "^4.0.7"
   },
   "packageManager": "pnpm@10.20.0",
   "engines": {
