feat(tabbed-category-grid): Implementar componente TabbedCategoryGrid com suporte a categorias e animações - Adicionar documentação detalhada e exemplo de uso - Incluir script para conversão de ícones SVG em componentes React - Atualizar AGENTS.md com protocolo de documentação proativa - Melhorar estilos globais para tabs e adicionar nova página de playground para testes de componentes.

--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "build-storybook": "storybook build",
     "storybook:doctor": "storybook doctor",
     "storybook:check": "storybook automigrate --dry-run",
-    "storybook:info": "storybook info"
+    "storybook:info": "storybook info",
+    "icon:convert": "node scripts/convert-svg-to-icon.cjs"
   },
   "dependencies": {
     "@auth/core": "0.41.1",
