--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "eslint-plugin-react": "latest",
     "framer-motion": "^12.23.24",
     "globals": "16.5.0",
+    "gsap": "^3.13.0",
     "happy-dom": "20.0.10",
     "input-otp": "latest",
     "jsonwebtoken": "^9.0.2",
