--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
   "dependencies": {
     "@auth/core": "0.41.1",
     "@auth/prisma-adapter": "^2.11.0",
+    "@base-ui-components/react": "1.0.0-beta.4",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
