feat(icon-customization): Enhance mobile experience with nested dialog for icon selection - Implemented a responsive fallback for the IconCustomizationBlock, allowing it to open as a nested dialog on mobile devices while preserving the popover on desktop. Updated the CategoryShowcase to handle icon requests dynamically and refined the dialog's styling for better visibility. Documentation updated to reflect these changes and ensure clarity on the new mobile behavior.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "db:seed": "tsx prisma/seed.ts",
     "db:seed:phones": "tsx scripts/seed-company-phones.ts",
     "db:studio": "prisma studio",
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack --hostname 0.0.0.0",
     "dev:with-browsertools": "concurrently --kill-others --names \"NEXT,TOOLS\" \"pnpm dev\" \"npx @agentdeskai/browser-tools-server@1.2.0\"",
     "dev:browsertools": "concurrently --kill-others --names \"NEXT,TOOLS\" \"pnpm dev\" \"npx     @agentdeskai/browser-tools-server@1.2.0\"",
     "browsertools": "npx @agentdeskai/browser-tools-server@1.2.0",
