--- a/package.json
+++ b/package.json
@@ -125,6 +125,8 @@
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
     "@react-email/render": "^1.3.1",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
     "@supabase/supabase-js": "^2.79.0",
     "@sveltejs/kit": "2.48.4",
     "@testing-library/dom": "^10.4.1",
@@ -174,6 +176,7 @@
     "svelte": "^5.43.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.181.2",
     "vaul": "latest",
     "vue": "^3.5.22",
     "vue-router": "latest",
@@ -197,6 +200,7 @@
     "@types/node": "^24.9.2",
     "@types/react": "19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@types/three": "^0.181.0",
     "@typescript-eslint/eslint-plugin": "8.46.3",
     "@typescript-eslint/parser": "8.46.3",
     "@vitejs/plugin-react": "^5.0.4",
