chore: Remove unused configuration and update dependencies - Deleted .chromaticrc.json and several GitHub instruction files to streamline the project. Updated @types/react dependency from 19.2.2 to 19.2.6 in package.json and pnpm-lock.yaml for compatibility. Updated Stripe API version in lib/stripe.ts to the latest. Made various adjustments to validation schemas to allow optional fields for better flexibility in input handling.

--- a/lib/validations/.prisma-zod-generator-manifest.json
+++ b/lib/validations/.prisma-zod-generator-manifest.json
@@ -1,8 +1,8 @@
 {
   "version": "1.0",
   "generatorVersion": "0.1.0",
-  "generatedAt": "2025-11-19T06:29:08.872Z",
-  "outputPath": "C:\\Projetos\\GB-Locacoes\\lib\\validations",
+  "generatedAt": "2025-11-21T02:36:30.652Z",
+  "outputPath": "C:\\Projects\\GB-Locacoes\\lib\\validations",
   "files": [
     "schemas\\enums\\TransactionIsolationLevel.schema.ts",
     "schemas\\enums\\UserScalarFieldEnum.schema.ts",
