--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "fix:grammar:changelog": "node scripts/apply-grammar-fixes.mjs CHANGELOG.md",
     "lint": "eslint . --ext .js,.ts,.tsx --no-color --quiet || exit 0",
     "lint:fix": "eslint . --ext .js,.ts,.tsx --fix",
-    "lint:md": "markdownlint \"**/*.md\"",
-    "lint:md:fix": "markdownlint \"**/*.md\" --fix",
+    "lint:md": "markdownlint \"**/*.md\" --ignore \"node_modules\"",
+    "lint:md:fix": "markdownlint \"**/*.md\" --ignore \"node_modules\" --fix",
     "fix:md": "pnpm format:md && pnpm lint:md:fix",
     "prepare": "husky",
     "quality:check": "pnpm format:check && pnpm lint && pnpm lint:md",
@@ -87,7 +87,7 @@
   "dependencies": {
     "@auth/core": "0.41.1",
     "@auth/prisma-adapter": "^2.11.0",
-    "@base-ui-components/react": "1.0.0-beta.4",
+    "@base-ui-components/react": "1.0.0-beta.6",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -95,8 +95,8 @@
     "@emotion/is-prop-valid": "^1.4.0",
     "@eslint/js": "9.39.1",
     "@hookform/resolvers": "^5.2.2",
-    "@next/bundle-analyzer": "16.0.1",
-    "@prisma/client": "^6.17.1",
+    "@next/bundle-analyzer": "16.0.3",
+    "@prisma/client": "6.18.0",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -124,22 +124,22 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
-    "@react-email/render": "^1.3.1",
+    "@react-email/render": "^2.0.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
-    "@supabase/supabase-js": "^2.79.0",
-    "@sveltejs/kit": "2.48.4",
+    "@supabase/supabase-js": "^2.84.0",
+    "@sveltejs/kit": "2.49.0",
     "@testing-library/dom": "^10.4.1",
     "@types/debug": "latest",
     "@types/eslint": "latest",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/nodemailer": "7.0.3",
+    "@types/nodemailer": "7.0.4",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^2.0.0",
     "@vercel/speed-insights": "latest",
-    "@vitest/browser": "latest",
-    "@vitest/ui": "latest",
+    "@vitest/browser": "4.0.12",
+    "@vitest/ui": "4.0.12",
     "bcryptjs": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -156,8 +156,8 @@
     "happy-dom": "20.0.10",
     "input-otp": "latest",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.552.0",
-    "next": "16.0.1",
+    "lucide-react": "^0.554.0",
+    "next": "16.0.3",
     "next-auth": "4.24.13",
     "next-themes": "latest",
     "nodemailer": "7.0.10",
@@ -165,20 +165,20 @@
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
-    "react-hook-form": "^7.66.0",
+    "react-hook-form": "^7.66.1",
     "react-resizable-panels": "^3.0.6",
     "react-syntax-highlighter": "^16.1.0",
-    "recharts": "^3.2.1",
-    "resend": "^6.4.1",
+    "recharts": "^3.4.1",
+    "resend": "^6.5.2",
     "scrollreveal": "^4.0.9",
     "sonner": "^2.0.7",
-    "stripe": "latest",
-    "svelte": "^5.43.3",
-    "tailwind-merge": "^3.3.1",
+    "stripe": "^20.0.0",
+    "svelte": "^5.43.14",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.181.2",
     "vaul": "latest",
-    "vue": "^3.5.22",
+    "vue": "^3.5.24",
     "vue-router": "latest",
     "zod": "^4.1.11",
     "zod-openapi": "^5.4.3",
@@ -186,49 +186,49 @@
   },
   "devDependencies": {
     "@asteasolutions/zod-to-openapi": "^8.1.0",
-    "@eslint/compat": "^1.4.1",
+    "@eslint/compat": "^2.0.0",
     "@eslint/eslintrc": "^3.3.1",
-    "@next/eslint-plugin-next": "^16.0.1",
-    "@storybook/addon-a11y": "^10.0.4",
-    "@storybook/addon-docs": "^10.0.4",
-    "@storybook/addon-onboarding": "^10.0.4",
-    "@storybook/addon-vitest": "^10.0.4",
-    "@storybook/nextjs-vite": "^10.0.4",
+    "@next/eslint-plugin-next": "^16.0.3",
+    "@storybook/addon-a11y": "^10.0.8",
+    "@storybook/addon-docs": "^10.0.8",
+    "@storybook/addon-onboarding": "^10.0.8",
+    "@storybook/addon-vitest": "^10.0.8",
+    "@storybook/nextjs-vite": "^10.0.8",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^24.9.2",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "^19.2.2",
+    "@types/node": "^24.10.1",
+    "@types/react": "19.2.6",
+    "@types/react-dom": "^19.2.3",
     "@types/three": "^0.181.0",
-    "@typescript-eslint/eslint-plugin": "8.46.3",
-    "@typescript-eslint/parser": "8.46.3",
-    "@vitejs/plugin-react": "^5.0.4",
-    "@vitest/browser": "^3.2.4",
-    "@vitest/browser-playwright": "4.0.7",
-    "@vitest/coverage-v8": "4.0.7",
-    "@vitest/ui": "^3.2.4",
-    "autoprefixer": "^10.4.21",
+    "@typescript-eslint/eslint-plugin": "8.47.0",
+    "@typescript-eslint/parser": "8.47.0",
+    "@vitejs/plugin-react": "^5.1.1",
+    "@vitest/browser": "^4.0.12",
+    "@vitest/browser-playwright": "^4.0.12",
+    "@vitest/coverage-v8": "4.0.12",
+    "@vitest/ui": "^4.0.12",
+    "autoprefixer": "^10.4.22",
     "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "16.0.3",
     "eslint-plugin-react-hooks": "7.0.1",
-    "eslint-plugin-storybook": "^10.0.4",
+    "eslint-plugin-storybook": "^10.0.8",
     "husky": "^9.1.7",
-    "jsdom": "^27.1.0",
+    "jsdom": "^27.2.0",
     "languagetool-cli": "^1.0.13",
     "markdown-to-jsx": "^8.0.0",
     "markdownlint": "^0.39.0",
-    "markdownlint-cli": "^0.45.0",
-    "next-openapi-gen": "^0.8.3",
-    "nodemon": "^3.1.10",
+    "markdownlint-cli": "^0.46.0",
+    "next-openapi-gen": "^0.8.8",
+    "nodemon": "^3.1.11",
     "playwright": "^1.55.1",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
-    "prisma": "^6.17.1",
-    "prisma-zod-generator": "^1.31.2",
-    "storybook": "^10.0.4",
+    "prisma": "6.18.0",
+    "prisma-zod-generator": "^1.32.1",
+    "storybook": "^10.0.8",
     "style-dictionary": "^5.1.1",
     "stylelint": "^16.25.0",
     "stylelint-config-standard": "^39.0.0",
@@ -237,8 +237,8 @@
     "tailwindcss": "3.4.17",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.1",
-    "vitest": "^4.0.7"
+    "typescript-eslint": "^8.47.0",
+    "vitest": "^4.0.12"
   },
   "packageManager": "pnpm@10.20.0",
   "engines": {
@@ -247,7 +247,7 @@
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "19.2.2",
+      "@types/react": "19.2.6",
       "@auth/core": "0.41.1",
       "tailwindcss": "3.4.17",
       "glob": "^11.0.3",
