--- a/lib/validations/.prisma-zod-generator-manifest.json
+++ b/lib/validations/.prisma-zod-generator-manifest.json
@@ -1,8 +1,8 @@
 {
   "version": "1.0",
   "generatorVersion": "0.1.0",
-  "generatedAt": "2025-11-22T21:50:54.755Z",
-  "outputPath": "C:\\Projects\\GB-Locacoes\\lib\\validations",
+  "generatedAt": "2025-11-22T22:51:57.866Z",
+  "outputPath": "C:\\Projetos\\GB-Locacoes\\lib\\validations",
   "files": [
     "schemas\\enums\\TransactionIsolationLevel.schema.ts",
     "schemas\\enums\\UserScalarFieldEnum.schema.ts",
