--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
   "dependencies": {
     "@auth/core": "0.41.1",
     "@auth/prisma-adapter": "^2.11.0",
-    "@base-ui-components/react": "1.0.0-beta.6",
+    "@base-ui-components/react": "1.0.0-beta.7",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -95,7 +95,7 @@
     "@emotion/is-prop-valid": "^1.4.0",
     "@eslint/js": "9.39.1",
     "@hookform/resolvers": "^5.2.2",
-    "@next/bundle-analyzer": "16.0.3",
+    "@next/bundle-analyzer": "16.0.5",
     "@prisma/client": "6.18.0",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -126,8 +126,8 @@
     "@radix-ui/react-tooltip": "latest",
     "@react-email/render": "^2.0.0",
     "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.4.0",
-    "@supabase/supabase-js": "^2.84.0",
+    "@react-three/fiber": "^9.4.2",
+    "@supabase/supabase-js": "^2.86.0",
     "@sveltejs/kit": "2.49.0",
     "@testing-library/dom": "^10.4.1",
     "@types/debug": "latest",
@@ -138,8 +138,8 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^2.0.0",
     "@vercel/speed-insights": "latest",
-    "@vitest/browser": "4.0.12",
-    "@vitest/ui": "4.0.12",
+    "@vitest/browser": "4.0.14",
+    "@vitest/ui": "4.0.14",
     "bcryptjs": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -153,93 +153,95 @@
     "framer-motion": "^12.23.24",
     "globals": "16.5.0",
     "gsap": "^3.13.0",
-    "happy-dom": "20.0.10",
+    "happy-dom": "20.0.11",
     "input-otp": "latest",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.554.0",
+    "lenis": "1.3.15",
+    "lucide-react": "^0.555.0",
     "motion": "^12.23.24",
-    "next": "16.0.3",
+    "next": "16.0.5",
     "next-auth": "4.24.13",
     "next-themes": "latest",
-    "nodemailer": "7.0.10",
+    "nodemailer": "7.0.11",
     "pino": "10.1.0",
     "react": "19.2.0",
-    "react-day-picker": "^9.11.1",
+    "react-day-picker": "^9.11.3",
     "react-dom": "19.2.0",
-    "react-hook-form": "^7.66.1",
+    "react-hook-form": "^7.67.0",
     "react-resizable-panels": "^3.0.6",
     "react-syntax-highlighter": "^16.1.0",
-    "recharts": "^3.4.1",
+    "recharts": "^3.5.1",
     "resend": "^6.5.2",
     "scrollreveal": "^4.0.9",
     "sonner": "^2.0.7",
     "stripe": "^20.0.0",
-    "svelte": "^5.43.14",
+    "svelte": "^5.45.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.181.2",
     "vaul": "latest",
-    "vue": "^3.5.24",
+    "vue": "^3.5.25",
     "vue-router": "latest",
-    "zod": "^4.1.11",
-    "zod-openapi": "^5.4.3",
-    "zustand": "^5.0.7"
+    "zod": "^4.1.13",
+    "zod-openapi": "^5.4.5",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@asteasolutions/zod-to-openapi": "^8.1.0",
     "@eslint/compat": "^2.0.0",
-    "@eslint/eslintrc": "^3.3.1",
-    "@next/eslint-plugin-next": "^16.0.3",
-    "@storybook/addon-a11y": "^10.0.8",
-    "@storybook/addon-docs": "^10.0.8",
-    "@storybook/addon-onboarding": "^10.0.8",
-    "@storybook/addon-vitest": "^10.0.8",
-    "@storybook/nextjs-vite": "^10.0.8",
+    "@eslint/eslintrc": "^3.3.3",
+    "@next/eslint-plugin-next": "^16.0.5",
+    "@storybook/addon-a11y": "^10.1.2",
+    "@storybook/addon-docs": "^10.1.2",
+    "@storybook/addon-onboarding": "^10.1.2",
+    "@storybook/addon-vitest": "^10.1.2",
+    "@storybook/nextjs-vite": "^10.1.2",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.10.1",
-    "@types/react": "19.2.6",
+    "@types/react": "19.2.7",
     "@types/react-dom": "^19.2.3",
     "@types/three": "^0.181.0",
-    "@typescript-eslint/eslint-plugin": "8.47.0",
-    "@typescript-eslint/parser": "8.47.0",
+    "@typescript-eslint/eslint-plugin": "8.48.0",
+    "@typescript-eslint/parser": "8.48.0",
     "@vitejs/plugin-react": "^5.1.1",
     "@vitest/browser": "^4.0.12",
-    "@vitest/browser-playwright": "^4.0.12",
-    "@vitest/coverage-v8": "4.0.12",
+    "@vitest/browser-playwright": "^4.0.14",
+    "@vitest/coverage-v8": "4.0.14",
     "@vitest/ui": "^4.0.12",
     "autoprefixer": "^10.4.22",
+    "baseline-browser-mapping": "latest",
     "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "16.0.5",
     "eslint-plugin-react-hooks": "7.0.1",
-    "eslint-plugin-storybook": "^10.0.8",
+    "eslint-plugin-storybook": "^10.1.2",
     "husky": "^9.1.7",
     "jsdom": "^27.2.0",
     "languagetool-cli": "^1.0.13",
-    "markdown-to-jsx": "^8.0.0",
+    "markdown-to-jsx": "^9.2.0",
     "markdownlint": "^0.39.0",
     "markdownlint-cli": "^0.46.0",
     "next-openapi-gen": "^0.8.8",
     "nodemon": "^3.1.11",
-    "playwright": "^1.55.1",
+    "playwright": "^1.57.0",
     "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
+    "prettier": "^3.7.3",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "prisma": "6.18.0",
     "prisma-zod-generator": "^1.32.1",
-    "storybook": "^10.0.8",
+    "storybook": "^10.1.2",
     "style-dictionary": "^5.1.1",
-    "stylelint": "^16.25.0",
+    "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.0",
     "stylelint-config-tailwindcss": "^1.0.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "3.4.17",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.47.0",
-    "vitest": "^4.0.12"
+    "typescript-eslint": "^8.48.0",
+    "vitest": "^4.0.14"
   },
   "packageManager": "pnpm@10.20.0",
   "engines": {
@@ -253,7 +255,8 @@
       "tailwindcss": "3.4.17",
       "glob": "^11.0.3",
       "rimraf": "^6.0.1",
-      "node-domexception": "npm:@types/node@*"
+      "node-domexception": "npm:@types/node@*",
+      "baseline-browser-mapping": "latest"
     },
     "onlyBuiltDependencies": [
       "@prisma/client",
