--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,7 @@
     ".next",
     "dist",
     "build",
-    "lib/validations/schemas/**/*.ts"
+    "lib/validations/schemas/**/*.ts",
+    "ScrollStack-Component-Reutilizavel"
   ]
 }
