--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
     "@eslint/js": "9.39.1",
     "@hookform/resolvers": "^5.2.2",
     "@next/bundle-analyzer": "16.0.7",
-    "@prisma/client": "6.18.0",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "7.1.0",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -155,7 +156,7 @@
     "gsap": "^3.13.0",
     "happy-dom": "20.0.11",
     "input-otp": "latest",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.3",
     "lenis": "1.3.15",
     "lucide-react": "^0.555.0",
     "motion": "^12.23.25",
@@ -163,7 +164,9 @@
     "next-auth": "4.24.13",
     "next-themes": "latest",
     "nodemailer": "7.0.11",
+    "pg": "^8.16.3",
     "pino": "10.1.0",
+    "postgres-array": "^3.0.4",
     "react": "19.2.1",
     "react-day-picker": "^9.11.3",
     "react-dom": "19.2.1",
@@ -229,8 +232,8 @@
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
-    "prisma": "6.18.0",
-    "prisma-zod-generator": "^1.32.1",
+    "prisma": "7.1.0",
+    "prisma-zod-generator": "^2.1.2",
     "storybook": "^10.1.4",
     "style-dictionary": "^5.1.1",
     "stylelint": "^16.26.1",
