refactor(auth): rename middleware to proxy and update authentication logic
- Renamed `middleware.ts` to `proxy.ts` to align with Next.js 16 conventions and avoid deprecation warnings during build.
- Updated authentication logic to maintain access control for `/admin` and `/debug` routes while allowing public access to other routes.
- Revised documentation in `api.md`, `deployment.md`, and `project-decisions.md` to reflect the changes and ensure clarity on the new implementation.

These updates enhance the project's compliance with Next.js standards and improve the authentication flow.

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ exclude:
   - .prettierrc
   - .markdownlint.json
   - components.json
-  - middleware.ts
+  - proxy.ts
   - pnpm-workspace.yaml
   - next-env.d.ts
   - vitest.shims.d.ts
