--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
   "dependencies": {
     "@auth/core": "0.41.1",
     "@auth/prisma-adapter": "^2.11.0",
-    "@base-ui-components/react": "1.0.0-beta.7",
+    "@base-ui-components/react": "1.0.0-rc.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -128,7 +128,7 @@
     "@react-email/render": "^2.0.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
-    "@supabase/supabase-js": "^2.86.0",
+    "@supabase/supabase-js": "^2.86.2",
     "@sveltejs/kit": "2.49.1",
     "@testing-library/dom": "^10.4.1",
     "@types/debug": "latest",
@@ -214,7 +214,7 @@
     "@vitest/coverage-v8": "4.0.15",
     "@vitest/ui": "^4.0.15",
     "autoprefixer": "^10.4.22",
-    "baseline-browser-mapping": "latest",
+    "baseline-browser-mapping": "^2.9.2",
     "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
     "eslint-config-next": "16.0.7",
