--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,10 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+        env:
+          DATABASE_URL: postgresql://dummy:dummy@localhost:5432/dummy
+          NEXTAUTH_SECRET: dummy-secret-for-ci
+          NEXTAUTH_URL: http://localhost:3000
 
       - name: Install Playwright
         run: pnpm exec playwright install chromium
@@ -54,6 +58,10 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+        env:
+          DATABASE_URL: postgresql://dummy:dummy@localhost:5432/dummy
+          NEXTAUTH_SECRET: dummy-secret-for-ci
+          NEXTAUTH_URL: http://localhost:3000
 
       - name: Build Storybook
         run: pnpm build-storybook
