fix(storybook): resolve build failure by adding missing @storybook/blocks dependency
### Modificações
- Adicionada a devDependency `@storybook/blocks@9.0.0-alpha.17` ao `package.json` para resolver o erro de importação durante o build do Storybook.
- Atualizado o `CHANGELOG.md` com detalhes sobre a correção do problema de build.
- Documentação de troubleshooting atualizada para refletir a nova dependência e solução aplicada.

### Resultados
- O comando `pnpm build-storybook` agora finaliza com sucesso, permitindo a compilação de stories MDX.

### Arquivos Modificados
- CHANGELOG.md
- package.json
- pnpm-lock.yaml
- docs/guides/storybook-troubleshooting.md
- docs/guides/storybook.md

--- a/package.json
+++ b/package.json
@@ -198,6 +198,7 @@
     "@storybook/addon-docs": "^10.1.4",
     "@storybook/addon-onboarding": "^10.1.4",
     "@storybook/addon-vitest": "^10.1.4",
+    "@storybook/blocks": "9.0.0-alpha.17",
     "@storybook/nextjs-vite": "^10.1.4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
