--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "diagnose:supabase": "node scripts/supabase-diagnostics.js",
     "supabase:status": "node scripts/check-supabase-performance.js",
     "migrate:v4": "node scripts/execute-migration-v4-fixed.js",
+    "migrate:supabase-performance": "node scripts/execute-supabase-performance-fix.js",
     "fix:rls": "node scripts/fix-rls-policies.js",
     "force:fix": "node scripts/force-fix-rls.js",
     "final:fix": "node scripts/final-rls-fix.js",
@@ -95,7 +96,7 @@
     "@emotion/is-prop-valid": "^1.4.0",
     "@eslint/js": "9.39.1",
     "@hookform/resolvers": "^5.2.2",
-    "@next/bundle-analyzer": "16.0.7",
+    "@next/bundle-analyzer": "16.0.8",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "7.1.0",
     "@radix-ui/react-accordion": "latest",
@@ -128,8 +129,8 @@
     "@react-email/render": "^2.0.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
-    "@supabase/supabase-js": "^2.86.2",
-    "@sveltejs/kit": "2.49.1",
+    "@supabase/supabase-js": "^2.87.0",
+    "@sveltejs/kit": "2.49.2",
     "@testing-library/dom": "^10.4.1",
     "@types/debug": "latest",
     "@types/eslint": "latest",
@@ -153,14 +154,14 @@
     "eslint-plugin-react": "latest",
     "framer-motion": "^12.23.25",
     "globals": "16.5.0",
-    "gsap": "^3.13.0",
+    "gsap": "^3.14.1",
     "happy-dom": "20.0.11",
     "input-otp": "latest",
     "jsonwebtoken": "^9.0.3",
     "lenis": "1.3.15",
-    "lucide-react": "^0.555.0",
+    "lucide-react": "^0.556.0",
     "motion": "^12.23.25",
-    "next": "16.0.7",
+    "next": "16.0.8",
     "next-auth": "4.24.13",
     "next-themes": "latest",
     "nodemailer": "7.0.11",
@@ -168,7 +169,7 @@
     "pino": "10.1.0",
     "postgres-array": "^3.0.4",
     "react": "19.2.1",
-    "react-day-picker": "^9.11.3",
+    "react-day-picker": "^9.12.0",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^3.0.6",
@@ -178,7 +179,7 @@
     "scrollreveal": "^4.0.9",
     "sonner": "^2.0.7",
     "stripe": "^20.0.0",
-    "svelte": "^5.45.5",
+    "svelte": "^5.45.8",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.181.2",
@@ -190,10 +191,10 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@asteasolutions/zod-to-openapi": "^8.1.0",
+    "@asteasolutions/zod-to-openapi": "^8.2.0",
     "@eslint/compat": "^2.0.0",
     "@eslint/eslintrc": "^3.3.3",
-    "@next/eslint-plugin-next": "^16.0.7",
+    "@next/eslint-plugin-next": "^16.0.8",
     "@storybook/addon-a11y": "^10.1.4",
     "@storybook/addon-docs": "^10.1.4",
     "@storybook/addon-onboarding": "^10.1.4",
@@ -203,28 +204,28 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^24.10.1",
+    "@types/node": "^24.10.2",
     "@types/react": "19.2.7",
     "@types/react-dom": "^19.2.3",
     "@types/three": "^0.181.0",
-    "@typescript-eslint/eslint-plugin": "8.48.1",
-    "@typescript-eslint/parser": "8.48.1",
-    "@vitejs/plugin-react": "^5.1.1",
+    "@typescript-eslint/eslint-plugin": "8.49.0",
+    "@typescript-eslint/parser": "8.49.0",
+    "@vitejs/plugin-react": "^5.1.2",
     "@vitest/browser": "^4.0.15",
     "@vitest/browser-playwright": "^4.0.15",
     "@vitest/coverage-v8": "4.0.15",
     "@vitest/ui": "^4.0.15",
     "autoprefixer": "^10.4.22",
-    "baseline-browser-mapping": "^2.9.2",
+    "baseline-browser-mapping": "^2.9.5",
     "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
-    "eslint-config-next": "16.0.7",
+    "eslint-config-next": "16.0.8",
     "eslint-plugin-react-hooks": "7.0.1",
     "eslint-plugin-storybook": "^10.1.4",
     "husky": "^9.1.7",
-    "jsdom": "^27.2.0",
+    "jsdom": "^27.3.0",
     "languagetool-cli": "^1.0.13",
-    "markdown-to-jsx": "^9.3.0",
+    "markdown-to-jsx": "^9.3.2",
     "markdownlint": "^0.40.0",
     "markdownlint-cli": "^0.46.0",
     "next-openapi-gen": "^0.8.9",
@@ -244,7 +245,7 @@
     "tailwindcss": "3.4.17",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.48.1",
+    "typescript-eslint": "^8.49.0",
     "vitest": "^4.0.15"
   },
   "packageManager": "pnpm@10.20.0",
