feat: implement cron jobs for late fees and quote expiration, enhance rental contract download functionality
- Added cron jobs to calculate and apply late fees for overdue rentals and to check and expire quotes that are no longer valid.
- Introduced a new endpoint for downloading rental contracts, allowing users to retrieve contracts in both HTML and PDF formats.
- Updated the rental history and details pages to include contract information and improve user experience with better data handling and display.

### Resultados
- Streamlined rental management processes with automated late fee calculations and quote expirations.
- Enhanced user access to rental contracts, improving overall service delivery and client satisfaction.

--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,15 @@
       "source": "/api-docs",
       "destination": "/api-docs"
     }
+  ],
+  "crons": [
+    {
+      "path": "/api/cron/late-fees",
+      "schedule": "0 0 * * *"
+    },
+    {
+      "path": "/api/cron/expire-quotes",
+      "schedule": "0 0 * * *"
+    }
   ]
 }
