feat: implement cron job automation and update environment configuration
- Added a new GitHub Actions workflow for external cron job dispatching, allowing execution of additional cron jobs beyond the Vercel Hobby plan limit.
- Updated `.env.example` to include `CRON_SECRET` and `CRON_BASE_URL` for secure access to cron job endpoints.
- Modified `vercel.json` to reflect the new cron job limits and added comments for clarity on the Hobby plan restrictions.
- Enhanced documentation in `troubleshooting.md` and `known-issues.md` to address Vercel's cron job limits and provide solutions for future upgrades.

### Resultados
- Enabled automated execution of critical tasks without exceeding Vercel's cron job limits, improving operational efficiency.
- Improved documentation and environment setup for better developer experience and deployment success.

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,6 @@ LOG_LEVEL="info"
 
 # NextAuth Debug Mode (set to 'true' to enable debug logging)
 NEXTAUTH_DEBUG=false
+
+CRON_SECRET="xxxxxxx"
+CRON_BASE_URL="https://locacoesgb.com.br"
