feat: implement automatic image cleanup in Supabase Storage
- Added functionality to automatically remove images from Supabase Storage when they are deleted from equipment during updates or when an equipment is completely deleted.
- Introduced utility functions in `lib/storage-utils.ts` for managing file deletions and a script `scripts/cleanup-orphaned-images.ts` to clean up orphaned images.
- Updated API routes in `app/api/admin/equipments/[id]/route.ts` to handle image deletions during equipment updates and deletions.
- Enhanced documentation to reflect new features and usage instructions.

### Resultados
- Prevented accumulation of orphaned files in storage, optimizing space usage and maintaining a clean storage environment.
- Improved overall data management and user experience by ensuring that image deletions are handled seamlessly.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "format:check": "prettier --check .",
     "format:md": "prettier --write \"**/*.md\"",
     "format:md:check": "prettier --check \"**/*.md\"",
+    "format:all": "pnpm format && pnpm format:md",
     "fix:encoding": "node scripts/fix-encoding.mjs",
     "fix:changelog": "node scripts/fix-encoding.mjs CHANGELOG.md",
     "check:grammar": "node scripts/fix-grammar.mjs",
@@ -45,6 +46,7 @@
     "fix:grammar:changelog": "node scripts/apply-grammar-fixes.mjs CHANGELOG.md",
     "lint": "eslint . --ext .js,.ts,.tsx --no-color --quiet || exit 0",
     "lint:fix": "eslint . --ext .js,.ts,.tsx --fix",
+    "lint:all": "pnpm lint:fix && pnpm lint",
     "lint:md": "markdownlint \"**/*.md\" --ignore \"node_modules\"",
     "lint:md:fix": "markdownlint \"**/*.md\" --ignore \"node_modules\" --fix",
     "fix:md": "pnpm format:md && pnpm lint:md:fix",
