feat: integrate Asaas payment gateway for boleto processing
- Added support for generating and verifying boletos through the Asaas payment gateway.
- Updated environment configuration in `.env.example` to include Asaas API keys and webhook settings.
- Enhanced documentation in `AGENTS.md` and created a new `README.md` for internal company documents.
- Modified payment verification logic to handle refunded statuses and updated the BoletoGateway class for integration.
- Improved webhook handling for Asaas notifications in the API routes.

### Resultados
- Enabled seamless payment processing via Asaas, enhancing the payment options available to users.
- Improved internal documentation for better access to company data and compliance with data management practices.

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,10 @@ STRIPE_SECRET_KEY="your-stripe-secret-key"
 MERCADO_PAGO_TOKEN="your-mercado-pago-token"
 ZAPSIGN_TOKEN="your-zapsign-token"
 MELHOR_ENVIO_TOKEN="your-melhor-envio-token"
+ASAAS_API_KEY="your-asaas-api-key"
+ASAAS_BASE_URL="https://sandbox.asaas.com/api/v3"
+ASAAS_WEBHOOK_SECRET="your-asaas-webhook-token"
+BOLETO_GATEWAY_TYPE="asaas"
 
 # Logging
 LOG_LEVEL="info"
