--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "db:seed": "tsx prisma/seed.ts",
     "db:seed:phones": "tsx scripts/seed-company-phones.ts",
     "db:clean:quotes": "tsx scripts/clean-quotes.ts",
+    "db:clean:rejected-rentals": "tsx scripts/clean-rejected-quote-rentals.ts",
     "db:studio": "prisma studio",
     "dev": "next dev --turbopack",
     "dev:network": "next dev --turbopack -H 0.0.0.0",
