--- a/lib/validations/.prisma-zod-generator-manifest.json
+++ b/lib/validations/.prisma-zod-generator-manifest.json
@@ -1,8 +1,8 @@
 {
   "version": "1.0",
   "generatorVersion": "0.1.0",
-  "generatedAt": "2025-12-18T01:47:19.248Z",
-  "outputPath": "C:\\Projetos\\GB-Locacoes\\lib\\validations",
+  "generatedAt": "2025-12-19T01:09:31.200Z",
+  "outputPath": "C:\\Projetos\\GB Locações\\lib\\validations",
   "files": [
     "schemas\\enums\\TransactionIsolationLevel.schema.ts",
     "schemas\\enums\\UserScalarFieldEnum.schema.ts",
