--- a/package.json
+++ b/package.json
@@ -209,6 +209,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.10.2",
+    "@types/pg": "^8.16.0",
     "@types/react": "19.2.7",
     "@types/react-dom": "^19.2.3",
     "@types/three": "^0.181.0",
