fix: resolve critical issues with Prisma 7.1.0 and Vercel deployment
- Corrected Prisma configuration by removing unsupported `url` and `directUrl` properties from `schema.prisma`, ensuring compliance with Prisma 7.1.0.
- Updated `prisma.config.ts` to properly configure `url` and document the use of `DIRECT_URL` for migrations.
- Implemented a new `safe-postinstall.js` script to prevent deployment failures on Vercel by conditionally running `prisma generate` only when `DATABASE_URL` is available.
- Revised documentation in `docs/issues/known-issues.md` to reflect these changes and provide guidance on the issues encountered.

### Resultados
- Enhanced stability of Prisma integration and deployment processes, particularly in serverless environments.
- Improved user experience by preventing build failures during Vercel deployments.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prebuild": "prisma generate && node scripts/post-prisma-generate.js",
     "build": "next build",
     "postbuild": "node scripts/patch-prisma.js",
-    "postinstall": "prisma generate && node scripts/post-prisma-generate.js",
+    "postinstall": "node scripts/safe-postinstall.js || true",
     "check:equipments": "node scripts/check-equipments.mjs",
     "check:supabase": "node scripts/check-supabase-performance.js",
     "diagnose:supabase": "node scripts/supabase-diagnostics.js",
