feat: enhance form validation and maintenance handling in QuoteForm
- Implemented comprehensive validation for required fields in the QuoteForm, displaying a single toast notification for all missing fields.
- Temporarily disabled maintenance validation to prevent errors during equipment rental requests, with a new script created to remove existing maintenance records.
- Updated the `QuotePage` and `QuoteForm` components to ensure smooth user experience with automatic focus and scrolling to the first missing field.
- Added a new script for cleaning up maintenance records from the database.

### Resultados
- Improved user experience by providing clear feedback on form submission errors and ensuring smoother interactions with the rental process.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "db:seed:phones": "tsx scripts/seed-company-phones.ts",
     "db:clean:quotes": "tsx scripts/clean-quotes.ts",
     "db:clean:rejected-rentals": "tsx scripts/clean-rejected-quote-rentals.ts",
+    "db:clean:maintenance": "tsx scripts/remove-maintenance-records.ts",
     "db:studio": "prisma studio",
     "dev": "next dev --turbopack",
     "dev:network": "next dev --turbopack -H 0.0.0.0",
