chore: update dependencies in package.json and pnpm-lock.yaml
- Added `axios` version 1.12.0 and `cookie` version 0.7.0 to the project dependencies.
- Updated `axios` from version 1.7.7 to 1.13.2 in the lock file for improved functionality and security.
- Adjusted the `generatedAt` timestamp in the Prisma Zod generator manifest for consistency.

### Resultados
- Enhanced project dependencies for better performance and security, ensuring compatibility with the latest features.

--- a/package.json
+++ b/package.json
@@ -268,7 +268,9 @@
       "glob": "^11.0.3",
       "rimraf": "^6.0.1",
       "node-domexception": "npm:@types/node@*",
-      "baseline-browser-mapping": "^2.9.2"
+      "baseline-browser-mapping": "^2.9.2",
+      "axios": "^1.12.0",
+      "cookie": "^0.7.0"
     },
     "onlyBuiltDependencies": [
       "@prisma/client",
